Refactored game code to use GUI instead of console

--- a/rpsgui.html
+++ b/rpsgui.html
@@ -9,12 +9,18 @@
     <div class="header">
         <h1>ROCK, PAPER SCISSORS</h1>
     </div>
-    <div class="status">stuff here</div>
+
+    <div class="status">
+        <p id="statusText">Choose Rock, Paper or Scissors!</p>
+        <p id ="scoreText">Player: 0 | Computer: 0</p>
+    </div>    
+    
     <div class="controls">
-        <button>ROCK</button>
-        <button>PAPER</button>
-        <button>SCISSORS</button>
+        <button id="btnRock">ROCK</button>
+        <button id="btnPaper">PAPER</button>
+        <button id="btnScissors">SCISSORS</button>
     </div>
 
+    <script src="rpsgui.js"></script>
 </body>
 </html>
