Added end game logic, code cleanup

--- a/rpsgui.html
+++ b/rpsgui.html
@@ -15,10 +15,11 @@
         <p id ="scoreText">Player: 0 | Computer: 0</p>
     </div>    
     
-    <div class="controls">
+    <div id="controls" class="controls">
         <button id="btnRock">ROCK</button>
         <button id="btnPaper">PAPER</button>
         <button id="btnScissors">SCISSORS</button>
+        <br><br>
     </div>
 
     <script src="rpsgui.js"></script>
